// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic route tests should responde with success on calibrate 1`] = `
Object {
  "message": "Your request to /calibrate is beeing processed",
  "success": true,
  "version": "0.1.0",
}
`;

exports[`basic route tests should responde with success on calibrate 2`] = `
Object {
  "message": "Your request to /predict is beeing processed",
  "success": true,
  "version": "0.1.0",
}
`;

exports[`basic route tests should responde with success on calibrate 3`] = `
Object {
  "message": "Your request to /model is beeing processed",
  "success": true,
  "version": "0.1.0",
}
`;
